--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qs": "6.10.1"
   },
   "devDependencies": {
+    "@types/qs": "6.9.7",
     "@types/node": "17.0.23",
     "browserify": "17.0.0",
     "esmify": "2.1.1",
