--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       
       - run: npm ci
+      - run: npm test
 
       - name: Create release
         env:
