--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "qs": "6.10.1"
   },
   "devDependencies": {
+    "@types/chai": "4.2.11",
+    "@types/mocha": "9.1.0",
     "@types/qs": "6.9.7",
     "@types/node": "17.0.23",
+    "chai": "4.2.0",
     "browserify": "17.0.0",
+    "mocha": "9.2.2",
     "esmify": "2.1.1",
+    "ts-node": "9.1.1",
     "typescript": "4.1.2"
   }
 }
