--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@multiversx/sdk-web-wallet-provider",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Signing provider for dApps: MultiversX (Web) Wallet",
   "main": "out/index.js",
   "types": "out/index.d.js",
@@ -28,5 +28,8 @@
     "mocha": "9.2.2",
     "ts-node": "9.1.1",
     "typescript": "4.1.2"
+  },
+  "peerDependencies": {
+    "@multiversx/sdk-core": ">= 12.1.0"
   }
 }
