--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@multiversx/sdk-web-wallet-provider",
-  "version": "3.2.1",
+  "version": "4.0.0",
   "description": "Signing provider for dApps: MultiversX (Web) Wallet",
   "main": "out/index.js",
   "types": "out/index.d.js",
@@ -24,12 +24,12 @@
     "@types/node": "17.0.23",
     "@types/qs": "6.9.7",
     "chai": "4.2.0",
-    "esmify": "2.1.1",
     "mocha": "9.2.2",
     "ts-node": "9.1.1",
-    "typescript": "4.1.2"
+    "typescript": "5.5.4",
+    "@multiversx/sdk-core": ">= 13.5.0"
   },
   "peerDependencies": {
-    "@multiversx/sdk-core": ">= 12.18.0"
+    "@multiversx/sdk-core": ">= 13.5.0"
   }
 }
