--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@multiversx/sdk-web-wallet-provider",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Signing provider for dApps: MultiversX (Web) Wallet",
   "main": "out/index.js",
   "types": "out/index.d.js",
@@ -19,17 +19,17 @@
     "qs": "6.10.3"
   },
   "devDependencies": {
+    "@multiversx/sdk-core": ">= 13.17.1",
     "@types/chai": "4.2.11",
     "@types/mocha": "9.1.0",
     "@types/node": "17.0.23",
     "@types/qs": "6.9.7",
     "chai": "4.2.0",
-    "mocha": "9.2.2",
+    "mocha": "11.1.0",
     "ts-node": "9.1.1",
-    "typescript": "5.5.4",
-    "@multiversx/sdk-core": ">= 13.5.0"
+    "typescript": "5.5.4"
   },
   "peerDependencies": {
-    "@multiversx/sdk-core": ">= 13.5.0"
+    "@multiversx/sdk-core": ">= 13.17.1"
   }
 }
